--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       --greeting-text-color: #000000;
       --greeting-border-color: #440e06;
 
-      --greeting-message: "👋 Hi there! How can I help you today?";
+      --greeting-message: "👋 Hello! How can we assist you?";
     }
 
     html, body {
