--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Chatbot Widget</title>
   <style>
     html, body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      height: 100%;
     }
+
     #chatbot-toggle {
       position: fixed;
       bottom: 20px;
@@ -21,34 +22,36 @@
       height: 60px;
       cursor: pointer;
       padding: 0;
-      z-index: 10000 !important;
+      z-index: 9999;
       animation: pulse 2s infinite ease-in-out;
     }
+
     #chatbot-toggle svg {
       width: 60px;
       height: 60px;
       border-radius: 50%;
     }
+
     @keyframes pulse {
       0% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.6); }
       50% { box-shadow: 0 0 0 12px rgba(255, 0, 0, 0); }
       100% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0); }
     }
+
     #chatbot-container {
       position: fixed;
       bottom: 90px;
       right: 20px;
-      width: 450px;
-      height: 620px;
+      width: 430px;
+      height: 590px;
       border-radius: 20px;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      background: #ffffff !important;
-      opacity: 1 !important;
-      z-index: 9999 !important;
+      background: #ffffff;
+      z-index: 9998;
       display: none;
       flex-direction: column;
     }
+
     #chatbot-header {
       display: flex;
       justify-content: space-between;
@@ -58,18 +61,22 @@
       color: #fff;
       font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
     }
+
     #chatbot-info {
       display: flex;
       flex-direction: column;
     }
+
     #chatbot-name {
       font-weight: bold;
       font-size: 18px;
     }
+
     #chatbot-title {
       font-size: 12px;
       color: #f0f0f0;
     }
+
     #chatbot-close {
       background: transparent;
       border: none;
@@ -77,13 +84,14 @@
       color: #fff;
       cursor: pointer;
     }
+
     #chatbot-iframe {
       width: 100%;
       height: 100%;
       border: none;
       flex-grow: 1;
-      box-sizing: border-box;
     }
+
     #chatbot-greeting {
       position: fixed;
       bottom: 100px;
@@ -96,28 +104,50 @@
       font-size: 15px;
       max-width: 240px;
       font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
-      z-index: 10000 !important;
+      z-index: 9999;
       border: 1px solid #e2e2e2;
       display: none;
       animation: fadeIn 0.6s ease-in-out;
     }
+
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(10px); }
       100% { opacity: 1; transform: translateY(0); }
     }
-    @media (max-width: 500px) {
+
+    @media (max-width: 768px) {
       #chatbot-container {
         width: 90vw;
         height: 80vh;
-        right: 5%;
-        bottom: 100px;
+        right: 5vw;
+        bottom: 80px;
+        border-radius: 16px;
+      }
+
+      #chatbot-toggle {
+        bottom: 20px;
+        right: 20px;
+        width: 50px;
+        height: 50px;
+      }
+
+      #chatbot-toggle svg {
+        width: 50px;
+        height: 50px;
+      }
+
+      #chatbot-greeting {
+        font-size: 14px;
+        bottom: 90px;
+        right: 20px;
+        max-width: 200px;
       }
     }
   </style>
 </head>
 <body>
 
-<!-- Toggle Button -->
+<!-- Toggle Button with SVG Icon -->
 <button id="chatbot-toggle" aria-label="Open Chatbot" title="Chat">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
     <circle cx="32" cy="32" r="32" fill="#ff5c5c" />
@@ -127,7 +157,7 @@
   </svg>
 </button>
 
-<!-- Greeting Bubble -->
+<!-- Greeting Message -->
 <div id="chatbot-greeting" aria-live="polite">
   👋 Hi there! How can I help you today?
 </div>
@@ -147,59 +177,43 @@
   </iframe>
 </div>
 
-<!-- JavaScript -->
+<!-- JavaScript Logic -->
 <script>
   const toggleBtn = document.getElementById('chatbot-toggle');
   const chatContainer = document.getElementById('chatbot-container');
   const closeBtn = document.getElementById('chatbot-close');
   const chatbotGreeting = document.getElementById('chatbot-greeting');
-  const isMobile = window.innerWidth <= 500;
-  const chatbotShown = localStorage.getItem('chatbotShown');
-  const chatbotGreetingShown = localStorage.getItem('chatbotGreetingShown');
 
   window.addEventListener('DOMContentLoaded', () => {
-    // Show greeting for 4s if it hasn't been shown before
-    if (!chatbotGreetingShown) {
-      chatbotGreeting.style.display = 'block';
-      setTimeout(() => {
-        chatbotGreeting.style.display = 'none';
-        localStorage.setItem('chatbotGreetingShown', 'true');
-      }, 4000);
-    }
-
-    // Auto-open chatbot only once on desktop
-    if (!chatbotShown && !isMobile) {
-      setTimeout(() => {
-        chatContainer.style.display = 'flex';
-        toggleBtn.style.display = 'none';
-        chatbotGreeting.style.display = 'none';
-        localStorage.setItem('chatbotShown', 'true');
-        localStorage.setItem('chatbotGreetingShown', 'true');
-      }, 5000);
-    } else {
-      toggleBtn.style.display = 'block';
-    }
+    chatbotGreeting.style.display = 'block';
+    const greetingTimer = setTimeout(() => {
+      chatbotGreeting.style.display = 'none';
+    }, 15000);
+    setTimeout(() => {
+      chatContainer.style.display = 'flex';
+      toggleBtn.style.display = 'none';
+      chatbotGreeting.style.display = 'none';
+      clearTimeout(greetingTimer);
+    }, 5000);
   });
 
   toggleBtn.addEventListener('click', () => {
     chatContainer.style.display = 'flex';
-    toggleBtn.style.display = 'none';
     chatbotGreeting.style.display = 'none';
-    localStorage.setItem('chatbotShown', 'true');
-    localStorage.setItem('chatbotGreetingShown', 'true');
+    toggleBtn.style.display = 'none';
   });
 
   closeBtn.addEventListener('click', () => {
     chatContainer.style.display = 'none';
     toggleBtn.style.display = 'block';
-    chatbotGreeting.style.display = 'none';
+    chatbotGreeting.style.display = 'block';
   });
 
   document.addEventListener('keydown', (e) => {
     if (e.key === 'Escape') {
       chatContainer.style.display = 'none';
       toggleBtn.style.display = 'block';
-      chatbotGreeting.style.display = 'none';
+      chatbotGreeting.style.display = 'block';
     }
   });
 </script>
