--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Custom Chatbot Widget</title>
   <style>
     html, body {
@@ -47,6 +47,7 @@
       border-radius: 20px;
       overflow: hidden;
       background: #ffffff;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* added shadow */
       z-index: 9998;
       display: none;
       flex-direction: column;
@@ -100,7 +101,7 @@
       color: #4a4a4a;
       padding: 12px 16px;
       border-radius: 18px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
       font-size: 15px;
       max-width: 240px;
       font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
@@ -147,7 +148,7 @@
 </head>
 <body>
 
-<!-- Toggle Button with SVG Icon -->
+<!-- Toggle Button -->
 <button id="chatbot-toggle" aria-label="Open Chatbot" title="Chat">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
     <circle cx="32" cy="32" r="32" fill="#ff5c5c" />
