--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
       position: fixed;
       bottom: 90px;
       right: 20px;
-      width: 430px;
-      height: 590px;
+      width: 450px;
+      height: 620px;
       border-radius: 20px;
       overflow: hidden;
       background: #ffffff;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* added shadow */
-      z-index: 9998;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3); 
+      opacity: 1 !important;
+      z-index: 9999 !important; 
       display: none;
       flex-direction: column;
     }
